--- a/.github/workflows/update-tap.yml
+++ b/.github/workflows/update-tap.yml
@@ -1,32 +1,44 @@
 name: Update Homebrew Tap
 
 on:
-  release:
-    types: [published]
+  workflow_run:
+    workflows: ["Release"]
+    types: [completed]
 
 jobs:
   update-tap:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: macos-latest
     steps:
       - name: Checkout XcodeQuery
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Prepare variables
         id: prep
         run: |
-          TAG="${GITHUB_REF_NAME}"
+          set -euo pipefail
+          SHA="${{ github.event.workflow_run.head_sha }}"
+          git fetch --tags --force
+          TAG=$(git tag --points-at "$SHA" | head -n1)
+          if [ -z "$TAG" ]; then
+            TAG=$(git describe --tags --abbrev=0 2>/dev/null || true)
+          fi
+          if [ -z "$TAG" ]; then
+            echo "Could not resolve tag for head_sha=$SHA" >&2
+            exit 1
+          fi
           echo "tag=$TAG" >> $GITHUB_OUTPUT
-          # Prebuilt asset URL from the Release created by the release workflow
           ASSET_URL="https://github.com/alvarhansen/XcodeQuery/releases/download/${TAG}/xcq-${TAG}-macos.zip"
           echo "asset_url=$ASSET_URL" >> $GITHUB_OUTPUT
-          # Extract version without leading 'v'
           VERSION_NO_V="${TAG#v}"
           echo "version=$VERSION_NO_V" >> $GITHUB_OUTPUT
 
       - name: Compute asset sha256
         id: sha
         run: |
-          # Retry until the release asset is available to avoid race with the release job
+          # Retry until the release asset is available to avoid any propagation delay
           curl -fL --retry 30 --retry-delay 5 --retry-all-errors "${{ steps.prep.outputs.asset_url }}" -o xcq.zip
           SHASUM=$(shasum -a 256 xcq.zip | awk '{print $1}')
           echo "sha=$SHASUM" >> $GITHUB_OUTPUT
@@ -54,9 +66,12 @@ class Xcq < Formula
 
   head "https://github.com/alvarhansen/XcodeQuery.git", branch: "main"
 
+  depends_on xcode: :build
+
   def install
     if build.head?
-      system "swift", "build", "-c", "release"
+      ENV["SWIFTPM_DISABLE_SANDBOX"] = "1"
+      system "swift", "build", "--disable-sandbox", "-c", "release"
       bin.install ".build/release/xcq"
     else
       bin.install "xcq"
